force-app/main/default/objects/Images_for_Portal__c/Images_for_Portal__c.object-meta.xml
<CustomObject>
    <label>Image for Portal</label>
    <nameField>
        <label>Images for Portal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Image for Portals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>