force-app/main/default/objects/Images_for_Portal__c/fields/Event_Image__c.field-meta.xml
<CustomField>
    <fullName>Event_Image__c</fullName>
    <label>Event Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>