force-app/main/default/objects/Images_for_Portal__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;https://www.bluelagoon.org.au/uploads/1/2/6/0/126078543/background-images/1533422746.jpg&quot;, &apos;Login&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>